[gd_scene load_steps=5 format=3 uid="uid://dbqeoh5b8xkc4"]

[ext_resource type="Script" path="res://collectibles/salt_coin.gd" id="1_25nqt"]
[ext_resource type="AudioStream" uid="uid://c5rnpdsi7gige" path="res://sfx/multi-pop.mp3" id="3_ifgfo"]
[ext_resource type="PackedScene" uid="uid://q5yax87k1bjm" path="res://collectibles/salt_sprite.tscn" id="4_qw002"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wlyq5"]
radius = 20.0

[node name="NaClCoin" type="Node2D"]
script = ExtResource("1_25nqt")
na_value = 4
cl_value = 4

[node name="NaCl" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, -3.8147e-06)
scale = Vector2(0.25, 0.25)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wlyq5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ifgfo")
volume_db = -10.0

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="SaltSprite" parent="SubViewport" instance=ExtResource("4_qw002")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
